--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.8.1
 amqp==5.1.1
 aniso8601==9.0.1
 async-timeout==4.0.2
+attrs==22.1.0
 beautifulsoup4==4.11.1
 bidict==0.22.0
 billiard==3.6.4.0
@@ -25,16 +26,20 @@ gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kombu==5.2.4
 Mako==1.2.2
 MarkupSafe==2.1.1
 packaging==21.3
+pluggy==1.0.0
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+py==1.11.0
 pyparsing==3.0.9
+pytest==7.1.3
 python-dotenv==0.21.0
 python-engineio==4.3.4
 python-socketio==5.7.1
@@ -44,6 +49,7 @@ requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.40
+tomli==2.0.1
 urllib3==1.26.11
 vine==5.0.0
 wcwidth==0.2.5
