--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,21 @@ version: '3.3'
 services:
   web:
     build: ./
-    command: python main.py run -h 0.0.0.0
+    command: python3 main.py
     volumes:
       - .:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
       - ./.env
+    depends_on:
+      - db
   db:
     image: postgres:13-alpine
     volumes:
       - postgres_data:/var/run/postgresql/data/
+    ports:
+      - 5432:5432
     environment:
       - POSTGRES_USER=username
       - POSTGRES_PASSWORD=password
@@ -28,8 +32,11 @@ services:
       - FLASK_DEBUG=1
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DATABASE_URL=postgresql://username:password@db:5432/dockerdbtest
     depends_on:
       - redis
+      - web
+      - db
 
   redis:
     image: redis:6-alpine
