--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ pkgutil_resolve_name==1.3.10
 pluggy==1.0.0
 prompt-toolkit==3.0.30
 protobuf==3.20.2
-psycopg2==2.9.3
+# psycopg2==2.9.3
 psycopg2-binary==2.9.3
 py==1.11.0
 pycparser==2.21
